# drpc

./: Cargo.toml  README.md  tasks.md
crates/arrpc-bin/: Cargo.toml
crates/arrpc-bin/src/: main.rs
crates/arrpc-bridge/: Cargo.toml
crates/arrpc-bridge/src/: lib.rs
crates/arrpc-core/: Cargo.toml
crates/arrpc-core/src/: detectables.rs  event.rs  frame.rs  lib.rs  protocol.rs
crates/arrpc-ipc/: Cargo.toml
crates/arrpc-ipc/src/: lib.rs
crates/arrpc-process/: Cargo.toml
crates/arrpc-process/src/: lib.rs
crates/arrpc-ws/: Cargo.toml
crates/arrpc-ws/src/: lib.rs
crates/arrpc-ws/tests/: ws_integration.rs
crates/drpc/: Cargo.toml
crates/drpc-bridge/: Cargo.toml
crates/drpc-bridge/src/: lib.rs
crates/drpc-core/: Cargo.toml
crates/drpc-core/src/: activity_registry.rs  detectables.rs  event.rs  lib.rs  metrics.rs  protocol.rs
crates/drpc-core/tests/: activity_normalize.rs  activity_registry.rs  detectables_loader.rs  event_bus.rs  metrics_snapshot.rs
crates/drpc-ipc/: Cargo.toml
crates/drpc-ipc/src/: lib.rs
crates/drpc-process/: Cargo.toml
crates/drpc-process/src/: lib.rs
crates/drpc-rest/: Cargo.toml
crates/drpc-rest/src/: lib.rs
crates/drpc-rest/tests/: rest_basic.rs
crates/drpc-ws/: Cargo.toml
crates/drpc-ws/src/: lib.rs
crates/drpc-ws/tests/: ws_activity_buttons_limit.rs  ws_activity_nonce_pid.rs  ws_activity_validation.rs  ws_auth_stubs.rs  ws_etf_errors.rs  ws_etf_negotiation.rs  ws_etf_validation.rs  ws_integration.rs  ws_large_payload.rs  ws_ready_and_ping.rs  ws_subscribe_validate.rs  ws_unknown_cmd_error.rs
crates/drpc/src/: main.rs
crates/drpc/tests/: e2e_ws_bridge.rs
