[package]
name = "arrpc-bin"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "arrpc"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arrpc-bridge = { optional = true, path = "../arrpc-bridge" }
arrpc-core = { path = "../arrpc-core" }
arrpc-ipc = { optional = true, path = "../arrpc-ipc" }
arrpc-process = { optional = true, path = "../arrpc-process" }
arrpc-ws = { optional = true, path = "../arrpc-ws" }
clap = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
bridge = ["dep:arrpc-bridge"]
default = ["bridge", "ipc", "process-scanning", "ws"]
ipc = ["dep:arrpc-ipc"]
process-scanning = ["dep:arrpc-process"]
ws = ["dep:arrpc-ws"]
