[package]
name = "arrpc-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
arrpc-core = { path = "../arrpc-core" }
axum = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
default = []
