[package]
name = "arrpc-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio.workspace = true
tracing = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
rustls.workspace = true

[features]
default = []
network = []
