[package]
name = "arrpc-ipc"
version = "0.1.0"
edition.workspace = true

[dependencies]
arrpc-core = { path = "../arrpc-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }

[features]
default = []
