[package]
name = "arrpc-process"
version = "0.1.0"
edition.workspace = true

[dependencies]
arrpc-core = { path = "../arrpc-core" }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
async-trait = "0.1"

[features]
default = []
