[package]
name = "arrpc-ws"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
arrpc-core = { path = "../arrpc-core" }
axum = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.27", optional = true }
tracing = { workspace = true }
uuid = { workspace = true }

[features]
default = []
test-ws = ["tokio-tungstenite"]
