[package]
name = "drpc-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum = { workspace = true }
drpc-core = { path = "../drpc-core" }
futures = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
default = []
