[package]
name = "drpc-bridge"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
drpc-core = { path = "../drpc-core" }
futures.workspace = true
parking_lot.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[features]
default = []
