[package]
name = "drpc-ipc"
version = "0.1.0"
edition.workspace = true

[dependencies]
drpc-core = { path = "../drpc-core" }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[features]
default = []
