[package]
name = "drpc-ws"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
drpc-core = { path = "../drpc-core" }
eetf = { version = "0.11.0", optional = true }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio-tungstenite.workspace = true

[features]
default = []
etf = ["dep:eetf"]
