[package]
name = "drpc"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true }
drpc-bridge = { optional = true, path = "../drpc-bridge" }
drpc-core = { path = "../drpc-core" }
drpc-ipc = { optional = true, path = "../drpc-ipc" }
drpc-process = { optional = true, path = "../drpc-process" }
drpc-ws = { optional = true, path = "../drpc-ws" }
serde = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
bridge = ["dep:drpc-bridge"]
default = ["bridge", "ipc", "process-scanning", "ws"]
ipc = ["dep:drpc-ipc"]
process-scanning = ["dep:drpc-process"]
ws = ["dep:drpc-ws"]
